src/App.css
/* Colours */

:root {
  --grey-border: 1px solid rgb(153, 153, 153);
  --subtle-nude: rgb(235 235 235);
  --subtle-nude-darker: rgb(234 216 216);
  --text-black: #212529;
  --opaque-black: #212529a5;
  --white: #FFFFFF;
}

/*Styles */

/* Header */

#alert-banner {
  font-size: 12px;
  background-color: var(--subtle-nude);
  height: 30px;
  text-transform: uppercase;
  cursor: pointer;
  transition: ease-in-out .3s;

}

#alert-banner:hover {
  background-color: var(--subtle-nude-darker);
}

#alert-banner p {
  display: contents;
}

#searchbar-nav {
  height: 80px;
  border-bottom: var(--grey-border);
}

#searchbar-nav input {
  background: transparent;
  border: none;
  z-index: 5;
  border-radius: 0;
}

#searchbar-nav input:hover {
  border-bottom: var(--grey-border);
}

#searchbar-nav form {
  position: relative;
}

#searchbar-nav .fa-search {
  display: flex;
  align-items: center;
  font-size: 16px;
  padding-right: 10px;
}

#searchbar-nav input:focus {
  box-shadow: none;
}

.Typewriter {
  position: absolute;
  top: 10px;
  left: 30px;
  font-size: 14px;
}

#menu-nav {
  height: 50px;
  border-bottom: var(--grey-border);
}

#menu-nav div {
  font-size: 14px;
  justify-content: center;
  text-transform: uppercase;
  color: var(--text-black);
}

#menu-nav a {
  text-decoration: none;
  padding: 0 10px;
}

#searchbar-nav div div,
form {
  min-width: 30%;
}

#searchbar-nav .navbar-brand {
  margin: 0 auto;
}

#searchbar-nav .navbar-nav {
  justify-content: end;
}

#searchbar-nav .navbar-toggler {
  border: transparent;
}

#searchbar-nav .navbar-toggler:focus {
  border: transparent;
  box-shadow: none;
}

#userControls {
  height: 300px;
  text-align: center;
}

#userControls p {
  font-size: 14px;
}

#userControls .btn {
  font-size: 14px;
  background-image: linear-gradient(178deg,rgb(40, 40, 40),rgb(40, 40, 40) 10%,rgba(0,0,0,.07) 10%,rgba(0,0,0,.07) 100%),linear-gradient(rgb(40, 40, 40),rgb(40, 40, 40));
  background-size: 100% 200%,100% 100%;
  background-position: 100% -100%,100% 100%;
  background-repeat: no-repeat;
  border-radius: 0;
  transition: background-position .3s cubic-bezier(.215,.61,.355,1);
  transform: translateZ(0);
  color: var(--white);
  padding: 20px 45px 20px 45px;
}

#userControls .btn:hover {
  background-position: 100% 25%,100% 100%;
}

.offcanvas-header {
  border-bottom: var(--grey-border);
}

.offcanvas-title {
  font-size: 18px!important;
}

/* Carousel  */

#carousel-home {
  width: 100%;
}

#carousel-home .carousel-overlay {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.5);
}

#carousel-home .carousel-inner {
  height: 60vh;
  position: relative;
}

.carousel-caption h1 {
  padding-bottom: 20px;
}

#carousel-home p {
  padding-bottom: 20px;
}

#carousel-home .carousel-item {
  height: 60vh;
}

#carousel-home .carousel-caption {
  bottom: 30%;
  color: white;
  text-transform: uppercase;
  font-weight: 800;
}

#carousel-home p {
  font-weight: 400;
  font-size: 14px;
}

#carousel-home .btn-dark {
  font-size: 14px;
  padding: 20px 45px 20px 45px;
  /* background-color: white; */
  border-radius: 0%;
  border: none;
  color: black;
  text-transform: uppercase;
  margin: 0 50px;
}

/* Home Image Cards */

#image-cards-home {
  padding: 50px;
  text-align: center;
}

.card {
  width: 300px;
  height: 600px;
  border-radius: 0;
  color: var(--white);
  margin: 0 50px;
  border: none;
  border: 0;
}

.card-img-overlay {
  background-color: var(--opaque-black);
  border: none;
  border-radius: 0;
  display: grid;
  align-content: center;
  cursor: pointer;
}

